# Adaptive-Learning

./: .env.example  .env.public  .env.secret.example  .gitignore  README.md  UPGRADE_INSTALLATION_GUIDE.md  billing_config.json  pyproject.toml
backend/: access_grants.py  billing.py  config.py  database.py  graph.py  knowledge_graph.py  knowledge_tracing.py  main.py  models.py  node_links.py  profile_security.py  prompts.py  requirements.txt  student_tracking.py  teacher_portal.py
backend/tests/: test_access_grants.py  test_agent_grade.py  test_billing.py  test_database_schema.py  test_graph_knowledge_tracing.py  test_help_request.py  test_hosted_model_config.py  test_knowledge_tracing.py  test_math_order.py  test_node_links.py  test_player_defaults.py  test_profile_payload.py  test_profile_security.py  test_teacher_portal.py
godot_project/: export_presets.cfg
godot_project/assets/models/Schoolboy/: character-b.glb.import
godot_project/assets/models/Schoolboy/Textures/: texture-b.png.import
godot_project/scenes/: Player.tscn  Startup.tscn
godot_project/scripts/: Classroom.gd  GameManager.gd  Library.gd  NetworkManager.gd  Player.gd  Registration.gd  Startup.gd
html/: .htaccess  index.html  site.webmanifest  styles.css
html/app/: .gitignore
platform_executables/: .gitkeep
scripts/: build_browser_site.sh  export_godot_platforms.sh  generate_godot_runtime_config.sh  watch_godot_exports.sh
